# goduration-python

./: .gitignore  Makefile  README.md  goduration.py  pyproject.toml
.github/workflows/: test.yml
goduration/: __init__.py  parser.py
tests/: test_edge_cases.py  test_parser.py
