[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goduration"
version = "0.1.0"
description = "Go-style duration parsing for Python"
license = {file = "LICENSE"}
authors = [
    {name = "botforge-pro"}
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.urls]
Homepage = "https://github.com/botforge-pro/goduration-python"
Repository = "https://github.com/botforge-pro/goduration-python"